# KSI

./: .dockerignore  .env.example  .gitignore  .gitmodules  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.githooks/: post-checkout  post-merge  pre-commit
.github/: CODEOWNERS
.github/workflows/: ci.yml  docs-deploy.yml
CONTRIBUTING/: index.html
adding_a_benchmark/: index.html
adding_an_evaluator/: index.html
architecture/: index.html
artifacts/: index.html
benchmarks/: README.md  common.sh  egress_smoke.sh  index.html  polyglot_test_feedback_smoke.sh  run_arc.sh  run_polyglot.sh  run_swebench_pro.sh  run_terminal_bench_2.sh
benchmarks/docs/: BENCHMARK_PREPARE.md  tb2_native_tools.md  web_tools_policy.md
benchmarks/scripts/: convert_arc_workspace_predictions.py  prepare_arc_native_prompts.py  prepare_arc_workspace_payloads.py  run_swebench_pro_eval.py
benchmarks/terminal_bench_2/: INTEGRATION.md  README.md  UPSTREAM_DIGEST_PINNING.md
configs/: README.md
configs/benchmarks/: arc_defaults.json
configs/kcsi/: .env.haiku.template  .env.openai.template  .env.sonnet.template
configs/ksi/: .env.opus.template  .env.shared.example  .env.sonnet35.template
container/: Dockerfile  Dockerfile.bench  build.sh  entrypoint.sh
docs/: CONTRIBUTING.md  adding_a_benchmark.md  adding_an_evaluator.md  architecture.md  artifacts.md  benchmarks.md  experiments.md  extending.md  faq.md  getting-started.md  glossary.md  improvement_strategies.md  index.md  open_source_models.md  programmatic_api.md  runtime-startup-performance.md  your_own_tasks.md
docs/reference/: api.md
docs/stylesheets/: extra.css
examples/custom_tasks/: README.md  run.py  run.sh  tasks.jsonl
examples/programmatic/: run_arc_demo.py
experiments/: index.html
extending/: index.html
faq/: index.html
getting-started/: index.html
glossary/: index.html
improvement_strategies/: index.html
javascripts/: mermaid-zoom.js
open_source_models/: index.html
programmatic_api/: index.html
reference/api/: index.html
runtime-startup-performance/: index.html
runtime_runner/: package-lock.json  package.json  tsconfig.json
runtime_runner/agent-runner/: package-lock.json  package.json  tsconfig.json
runtime_runner/shared/: retryable_markers.json
runtime_runner/src/: arc_nomcp_synth.ts  config.ts  container_args.ts  container_mounts.ts  container_output.ts  container_runner.ts  container_runtime.ts  container_types.ts  egress_allowlist.ts  logger.ts  main.ts  native_memory.ts  sessions.ts  types.ts  workspace.ts  workspace_scope.ts
scripts/: README.md  quickstart.sh  rebuild_container_if_needed.sh  run_kcsi.sh  run_ksi.sh  setup_all.sh  typecheck_agent_runner.sh
scripts/dev/: check_worktree_discipline.sh  clean_run_artifacts.sh
search/: search_index.json
src/kcsi/: __init__.py  api.py  cli.py  cli_reporting.py  doctor.py  errors.py  layout.py  logging_config.py  models.py  protocols.py  providers.py  tokens.py  trace_events.py  utils.py
src/ksi/: __init__.py  api.py  cli.py  cli_reporting.py  doctor.py  errors.py  layout.py  logging_config.py  models.py  protocols.py  providers.py  tokens.py  trace_events.py  utils.py
stylesheets/: extra.css
templates/: INSTRUCTION.md
tests/: __init__.py  conftest.py  helpers.py  orchestrator_phase_decoupling_guard.py  orchestrator_phase_helpers.py  test_arc_task_map_provenance.py  test_attempt_event_test_details.py  test_cli_arc_split.py  test_cli_cross_task_conditioning.py  test_cli_flags.py  test_cli_holdout.py  test_cli_output_json.py  test_cli_unit.py  test_command_evaluator.py  test_cross_task_shared_container.py  test_cross_task_target_conditioning.py  test_custom_task_source.py  test_custom_tasks_example.py  test_discussion_prompts.py  test_distill_escalation.py  test_distill_phase.py  test_distill_retry.py  test_distilled_knowledge_enrichment.py  test_docs_contracts.py  test_doctor.py  test_embeddings_cache.py  test_enrich_seed_packages.py  test_errors.py  test_experiment_script_review_fixes.py  test_extract_approach_excerpt.py  test_format_query_records_md.py  test_holdout_probe.py  test_import_order_registration.py  test_improvement_strategy.py  test_integration_workstream.py  test_knowledge_integration.py  test_knowledge_migration.py  test_knowledge_phase_health.py  test_kt_adapter_parity.py  test_kt_cross_task_render.py  (+55 more)
tests/arc/: test_arc_defaults_sync.py  test_arc_loader.py  test_arc_prep.py  test_arc_prompt_contract.py  test_arc_prompt_multi_test.py  test_arc_semantics.py  test_arc_session.py  test_arc_session_evaluator.py  test_arc_task_md_inline_grids.py  test_engine_arc_reference_gate.py  test_harness_comprehensive_arc_eval.py
tests/discussion/: test_concreteness_module.py
tests/distillation/: test_cross_task.py  test_cross_task_relevance.py  test_distill_parity_contract.py  test_distiller.py  test_per_task.py  test_polyglot_feedback_sidecar_noleak.py  test_prompts.py  test_removed_channel_env_guard.py  test_schema_coercion_alignment.py  test_types.py  test_window_path_characterization.py
tests/eval/: test_evaluator_registry.py  test_noop_evaluator.py  test_polyglot_docker.py  test_polyglot_evaluator.py  test_polyglot_loader.py  test_polyglot_prompt_contract.py  test_score_extraction_shared.py  test_score_from_eval.py  test_score_from_eval_dispatch.py  test_score_swebench_from_eval.py  test_swebench_pro.py  test_swebench_pro_baseline_helpers.py  test_swebench_pro_grader_contract.py  test_swebench_pro_task_map.py  test_swebench_pro_teleport_regression.py  test_swebench_prompt_contract.py  test_swebench_status_contract.py  test_tb2_memory_adapter.py  test_tb2_submission.py  test_terminal_bench_2_evaluator.py  test_terminal_bench_2_loader.py  test_terminal_bench_2_prompt_contract.py  test_terminal_bench_2_runtime.py  test_terminal_bench_2_seed_policy.py
tests/forum/: test_cross_task_forum_phase.py  test_drain_forum_bus.py  test_drain_forum_bus_bulk.py  test_forum_bus_reply_to.py  test_forum_cli_flag.py  test_forum_early_exit.py  (+20 more)
your_own_tasks/: index.html
(+343 files in other folders)
